<resources>
    <string name="app_name">Gi Rage</string>
    <string name="Story1">Bachendri Pal is a mountaineer who made history by becoming the first Indian woman to reach the summit of Mount Everest in 1984. She realised she wanted to be a mountaineer at the age of twelve, when she along with her friends scaled a 13,123 ft mountain on a school picnic. From that time on, she knew her future lay in scaling the highest of mountains. She bagged several awards during her mountaineering career, including the Padmashree and the Arjuna awards which she received in the years 1985 and 1986 respectively. By continuously reaching new heights in her career, Bachendri Pal proved that all women can achieve success in any field they choose to pursue.
</string>
    <string name="app_intro_skip">Skip</string>
    <string name="item_1">Home</string>
    <string name="item_2">HelpLine</string>
    <string name="item_3">Situation</string>
    <string name="fa1">WHAT IS GI RAGE ?</string>
    <string name="fa2">HOW TO USE GI RAGE ?</string>
    <string name="fa3">WHAT IS PANIC BUTTON ?\nAnd\n HOW TO USE IT ?</string>
    <string name="fa4">WHAT IS GPS TECHNOLOGY ?</string>
    <string name="fa5">WHY REAL LIFE STORIES AND MOTIVATION ?</string>
    <string name="fa6">WHAT IS EMERGENCIES NUMBER\n OR \nHELPLINE NUMBERS ?</string>
    <string name="fa7">WHY SAFETY TIPS ?</string>
    <string name="fa8">IS THIS APPLICATION IS ONLY FOR GIRLS ? \nIS IT TOTALLY GIRL ORIENTED ? \nWHAT A BOY OR A MEN CAN DO ?</string>
    <string name="fa9">WE NAME OUR APP “GI rage” WHY ?\n WHATS THE LOGIC BEHIND ? \nAND WHY THIS LOGO ?</string>
    <string name="fqa1">GI RAGE is an Android app which will try to help girls and women’s to overcome there fears in the society and to be Brave enough to tackle any Situation.</string>
    <string name="fqa2">Just go to You tube and type GI rage or check our menu where we provide you the link of that You tube  video  , so that you can directly jump to the video from here itself. In that video we have completely explained  how to use GI rage.</string>
    <string name="fqa3">And we think that this is the most the important feature that  we are providing you through GI rage. Panic button is nothing but an emergency feature which you can use whenever you are or will be  in some trouble.  Its very  simple just feed a contact of a person whom you want to ping whenever you are in trouble. After saving your contact , just tap a PANIC BUTTON and with that tap your current location with a default message i.e.  I’m in trouble , I need help will be sent to your given number.</string>
    <string name="fqa4">If you are stranger or you don’t know the location then this feature will help you out. We think that if girls or women’s whenever wanted to use washroom in a public area , its very difficult to find a one. So to find TOILETS , POLICE  STATION etc  just go through this app , and you can find  the  safest and nearest possible location without asking anyone else.</string>
    <string name="fqa5">We feel that if someone is going though this hard phase and is depressed , I they  feel  weak. So they can feel  better  just by going through all the true stor.ies and get motivated .There will be some good movies also by which you can easily entertain yourself and get motivated.\nOur motive is to make you feel  Safe , Secure and Strong.</string>
    <string name="fqa6">There are so many Emergency numbers available for girls and women’s through which they can get help but , very  few people are aware of this because there is no awareness. So here you just have to register with your city , we don’t need your personal detail like name , number or address only need to know about your city  and you will get all the numbers (Helpful) related to your city on your mobile display.</string>
    <string name="fqa7">In this part we will provide you some safety tips and will guide you through all those situations wherever you feel that you are or might get in trouble. So to explain this part in one line there is phrase “ PREVENTION IS BETTER THAT CURE “. So this is what this point is all about .</string>
    <string name="fqa8">If you are thinking same then let me tell you , boys plays a huge role and the first and the major thing that every boy or men should do is to RESPECT GIRLS , HELP THEM UNCONDITIONALLY .\n\n
 If a I talk about this application then boys plays a vital role in it .\n What they can actually do is to SHARE THIS APP to your  MOTHER , SISTER and YOUR FRIENDS.\n\n
“ NOT ONLY TO PROVE EVERYONE BUT TO PROVE YOURSELF THAT YOU ARE A REAL MEN “
    </string>
    <string name="fqa9">We believe that this app is all about a girl and her courage so we decided to use a tagline  “ A GIRL WITH A COURAGE “ and to name our app , we decided to take first two letters from GIRL and last four letter from Courage i.e. GI + rage so it becomes GI rage.\n\n
        WHY THIS LOGO ?  Well when you see this logo , a mother is holding her child in her arms , as we know this app is all about  A girl and her Courage so we think the most courageous women in this world is a  MOTHER .
</string>
    <string name="Tagline"> THANK YOU VERY MUCH FROM THE TEAM OF GI rage .\n
    FOR any query you can visit our FACEBOOK page\n https://www.facebook.com/girage/ or our Instagram page\nhttps://www.instagram.com/gi.rage/ \n
        You can also mail us on -\n help.girage@gmail.com
    </string>
    <string name="title_activity_home">Gi-Rage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="MillionDollarBaby">Million Dollar Baby</string>
    <string name="TheDevilWearsPrada">The Devil Wears Prada </string>
    <string name="Spy">Spy </string>
    <string name="EnglishVinglish">English Vinglish </string>
    <string name="TheBlindSide"> The Blind Side </string>
    <string name="EasyA">Easy A</string>
    <string name="Fargo">Fargo</string>
    <string name="LittleMissSunshine"> Little Miss Sunshine</string>
    <string name="BendItLikeBeckham">Bend It Like Beckham</string>
    <string name="BanditQueen">Bandit Queen</string>
    <string name="PitchPerfect">Pitch Perfect</string>
    <string name="Poorna">Poorna</string>
    <string name="aMillionDollarBaby">Million Dollar Baby throws every stereotype about a girl to the wind. It also rightfully tells us that our age might only slow us down physically, but not our spirit. Because Maggie Fitzgerald tells us that dreams are not bound by limits</string>
    <string name="aTheDevilWearsPrada">Because Miranda Priestly rules in a man world. And Andrea Sachs is her perfect foil. You can pick either side and not regret it because they both hold their own. It also helps that the movie is very funny and the fashion game is on point. </string>
    <string name="aPitchPerfect">A bunch of oddballs decide to join forces and compete at the national a cappella competition. Hilarity ensues. All the good girls, the mean girls, the weird girls are set into stereotypes just to break them. And what a win that is. </string>
    <string name="aBendItLikeBeckham">Gurinder Chadha magnum opus is all about girl power. Beg, lie, fight but do not let go of your dreams because of gender stereotypes. And a more befitting ode to women football fans might not be found. </string>
    <string name="aFargo">The lead of this Coen brothers neo-noir comedy thriller is a pregnant detective investigating the case of two homicidal maniacs. For every time there is a movie of a macho man punching and making cars fly, there is Fargo, depicting a woman at her most vulnerable and yet her strongest time. </string>
    <string name="aTheBlindSide">The is the story behind the making of NFL player, Michael Oher, who played for the Baltimore Raven and the Tennessee Titans and is currently playing for the Carolina Panthers. From a traumatised kid to a prized player, Ohers life was changed by the kindness and love of a woman who took him in during his worst times.  </string>
    <string name="aEasyA">In the face of the righteous school bullies, Olive embraces her reputation as a "dirty skank". Easy A is essentially an urge to young women to not let others perspective change or affect ones true self. It is also a masterclass on how to show that reputed middle finger to people who talk behind your back. </string>
    <string name="aLittleMissSunshine">Because Olive ideally should give every girl confidence goals. She is a chubby, bespectacled kid and she is fabulous. Olive might doubt it at times but she knows that there is none quite like her. </string>
    <string name="aSpy">Move over Chief Inspector Jacques Clouseau, there is a new bumbling goof in town. And she goes by the name of Susan Cooper. She will take every notion about a spy thriller and smash them with her bare hands. It also helps that Susan Cooper is brought to life by the hilarious and badass Melissa McCarthy. </string>
    <string name="situation1">Concealed handguns, mace, or pepper spray are all handy defense devices you should consider having at the ready. Knives and guns are dangerous weapons many consider useful, but can also be used against you if you are unprepared to use them yourself. Be very cautious and smart if you choose to carry a weapon and take the proper certification classes to make sure you know how to handle a weapon safely. Never carry one illegally. Most states that respect individuals rights have CCW permits available for law abiding citizens. You can also get a small personal alarm keychain that will emit a high pitch siren like a car alarm when its pin is pulled, similar in design to a grenade\n•	Consider taking a self-defense class if you live in a dangerous area and are concerned for your well being.
</string>
    <string name="situation2">If you have got a long walk home from the bus or train station at night after work, consider meeting a friend near the metro stop and walking together. Staying in groups is the safest way to avoid these kinds of situations.\n\n
•	If you must walk alone, gloom onto another group of walkers and stick close by. You do not have to know them to find safety in numbers.
</string>
    <string name="situation3">If the attacker is trying to choke you by wrapping his arms around your neck, bring the ball of your foot forward, as if you just kicked a soccer ball, and forcefully slam it into the area of their leg between their ankle and mid leg, or the groin. This may break their leg or otherwise incapacitate your attacker.</string>
    <string name="situation4">. If an attacker tries to grab you from behind to choke you, press his forearm against your collarbone instead of trying to pull it directly off, which may be difficult if you are fighting with someone stronger than you. Put one hand above his elbow (on the forearm) and one hand below it (so your hands are on both sides of the elbow). Then, in one strong and determined movement, step and swing your entire body around like the arm is the hinge to your body screen door.\n
•	This will get you out of his or her choke and leave his or her head, ribs, and legs wide open to your counter attack. When your attacker is behind you, the shins are right behind your legs and primed for your stomping and raking.
</string>
    <string name="situation5">If the attacker is trying to pick you up from behind, drop your hips quickly and violently as if you were plopping down on a love seat. This will make you harder to pick up and give you an extra moment to attack them and fend them off by stomping on their shins or repositioning for a frontal defense</string>
</resources>