<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:targetApi="lollipop">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#e8e8e8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:elevation="5dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/storyhead1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="Arm yourself"
            android:textColor="#ff4081"

            android:textSize="20sp" />

        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="#000000" />

        <ImageView
            android:id="@+id/storyImagee1"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="6dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:background="#ff4081" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="#ffffff"
            android:elevation="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storydetail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:elevation="3dp"
                android:paddingBottom="10dp"
                android:paddingLeft="6dp"
                android:text="@string/situation1"
                android:textColor="#000000"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />
</LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:elevation="5dp"
        android:layout_margin="10dp">
            <TextView
                android:id="@+id/storyhead2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="Avoid walking alone"
                android:textColor="#ff4081"

                android:textSize="20sp" />

        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="#000000" />

            <ImageView
                android:id="@+id/storyImagee2"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="6dp"
                />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:background="#ff4081" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storydetail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="3dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/situation2"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:elevation="5dp"
            android:layout_margin="10dp"
            tools:targetApi="lollipop">

            <TextView
                android:id="@+id/storyhead3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="Get dirty"
                android:textColor="#ff4081"

                android:textSize="20sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="#000000" />

            <ImageView
                android:id="@+id/storyImagee3"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="6dp"
                 />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="#ff4081" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storydetail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="3dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/situation3"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    tools:targetApi="lollipop"
                    tools:ignore="HardcodedText,RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:elevation="5dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/storyhead4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="Deflect the hold"
                android:textColor="#ff4081"

                android:textSize="20sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="#000000" />

            <ImageView
                android:id="@+id/storyImagee4"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="6dp"
                 />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="#ff4081" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storydetail4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="3dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/situation4"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:elevation="5dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/storyhead5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="Sit down"
                android:textColor="#ff4081"

                android:textSize="20sp" />

            <View
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="#000000" />

            <ImageView
                android:id="@+id/storyImagee5"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="6dp"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="#ff4081" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="#ffffff"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storydetail5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="3dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/situation5"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>